Update osx bundle files
The bundle icon now includes all recommended image resolutions and OBS
is now started as high resoltion application for high dpi displays,
still need to add high resolution images for icons used inside OBS

--- a/cmake/osxbundle/Info.plist
+++ b/cmake/osxbundle/Info.plist
@@ -2,7 +2,7 @@
 <!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>CFBundleIcon</key>
+	<key>CFBundleIconFile</key>
 	<string>OBS Studio.icns</string>
 	<key>CFBundleName</key>
 	<string>OBS Studio</string>	
@@ -17,5 +17,8 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>LSUIElement</key>
-	<string>1</string></dict>
+	<string>1</string>
+	<key>NSHighResolutionCapable</key>
+	<true/>
+</dict>
 </plist>
