Implement settings interface for plugins
Add a fairly easy to use settings interface that can be passed to
plugins, and replaced the old character string system that was being
used before.  The new data interface allows for an easier method of
getting/altering settings for plugins, and is built to be serializable
to/from JSON.

Also, removed another wxFormBuilder file that was no longer in use.

--- a/libobs/CMakeLists.txt
+++ b/libobs/CMakeLists.txt
@@ -138,6 +138,7 @@ set(libobs_libobs_SOURCES
 	obs-source.c
 	obs-output.c
 	obs.c
+	obs-data.c
 	obs-module.c
 	obs-display.c
 	obs-scene.c
@@ -148,6 +149,7 @@ set(libobs_libobs_HEADERS
 	obs-service.h
 	obs-internal.h
 	obs.h
+	obs-data.h
 	obs-module.h
 	obs-scene.h
 	obs-source.h
