Include $ORIGIN in portable mode on unix

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,9 +47,11 @@ endif()
 
 if(APPLE)
 	set(CMAKE_MACOSX_RPATH TRUE)
-	set(CMAKE_INSTALL_RPATH
-		"${CMAKE_INSTALL_RPATH};@loader_path/;@executable_path/")
 	set(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)
+	list(APPEND CMAKE_INSTALL_RPATH "@loader_path/" "@executable_path/")
+elseif(UNIX AND NOT UNIX_STRUCTURE)
+	set(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)
+	list(APPEND CMAKE_INSTALL_RPATH "$ORIGIN")
 endif()
 
 if(NOT INSTALLER_RUN)
