--- a/plugins/obs-ffmpeg/CMakeLists.txt
+++ b/plugins/obs-ffmpeg/CMakeLists.txt
@@ -24,3 +24,6 @@ target_link_libraries(obs-ffmpeg
 	${Libswresample_LIBRARIES})
 
 install_obs_plugin(obs-ffmpeg)
+
+obs_fixup_install_target(obs-ffmpeg PATH ${Libavformat_LIBRARIES})
+obs_fixup_install_target(obs-ffmpeg PATH ${Libswresample_LIBRARIES})
