--- a/plugins/obs-outputs/CMakeLists.txt
+++ b/plugins/obs-outputs/CMakeLists.txt
@@ -21,3 +21,5 @@ target_link_libraries(obs-outputs
 	${Libx264_LIBRARIES})
 
 install_obs_plugin(obs-outputs)
+
+obs_fixup_install_target(obs-outputs PATH ${Libx264_LIBRARIES})
