Implement properties definition interface
Implement a properties definition interface to allow modules to export
general properties associated with objects of libobs.

The properties definition interface allows the option for automatic
settings UI generation (which will make simple plugins easier to develop
without the need for user interface), as well as allow real-time
property editing of values of things like sources/outputs/etc without
having to open property dialogs.  More property types can be added in
the future as needed as well.

--- a/libobs/CMakeLists.txt
+++ b/libobs/CMakeLists.txt
@@ -138,6 +138,7 @@ set(libobs_libobs_SOURCES
 	obs-source.c
 	obs-output.c
 	obs.c
+	obs-properties.c
 	obs-data.c
 	obs-module.c
 	obs-display.c
@@ -150,6 +151,7 @@ set(libobs_libobs_HEADERS
 	obs-internal.h
 	obs.h
 	obs-ui.h
+	obs-properties.h
 	obs-data.h
 	obs-module.h
 	obs-scene.h
