--- a/vs/2013/test-input/test-input.vcxproj.filters
+++ b/vs/2013/test-input/test-input.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="..\..\..\test\test-input\test-sinewave.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\test\test-input\test-desktop-msw.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\test\test-input\test-random.c">
@@ -39,6 +42,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\test\test-input\test-sinewave.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\test\test-input\test-desktop-msw.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
