Updated cmake files for ffmpeg plugin
Also, fixed an enum name issue.  No clue why visual
studio actually compiled that without warnings/errors

--- a/plugins/obs-ffmpeg/CMakeLists.txt
+++ b/plugins/obs-ffmpeg/CMakeLists.txt
@@ -1,5 +1,13 @@
 project(obs-ffmpeg)
 
+find_package(Libavcodec REQUIRED)
+include_directories(${Libavcodec_INCLUDE_DIR})
+add_definitions(${Libavcodec_DEFINITIONS})
+
+find_package(Libswscale REQUIRED)
+include_directories(${Libswscale_INCLUDE_DIR})
+add_definitions(${Libswscale_DEFINITIONS})
+
 find_package(Libavformat REQUIRED)
 include_directories(${Libavformat_INCLUDE_DIR})
 add_definitions(${Libavformat_DEFINITIONS})
@@ -20,10 +28,14 @@ add_library(obs-ffmpeg MODULE
 	${obs-ffmpeg_HEADERS})
 target_link_libraries(obs-ffmpeg
 	libobs
+	${Libavcodec_LIBRARIES}
+	${Libswscale_LIBRARIES}
 	${Libavformat_LIBRARIES}
 	${Libswresample_LIBRARIES})
 
 install_obs_plugin(obs-ffmpeg)
 
+obs_fixup_install_target(obs-ffmpeg PATH ${Libavcodec_LIBRARIES})
+obs_fixup_install_target(obs-ffmpeg PATH ${Libswscale_LIBRARIES})
 obs_fixup_install_target(obs-ffmpeg PATH ${Libavformat_LIBRARIES})
 obs_fixup_install_target(obs-ffmpeg PATH ${Libswresample_LIBRARIES})
