--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -4,5 +4,5 @@ if(WIN32)
 	add_subdirectory(dshow)
 endif()
 
-#add_subdirectory(obs-ffmpeg)
+add_subdirectory(obs-ffmpeg)
 add_subdirectory(obs-outputs)
