--- a/test/test-input/CMakeLists.txt
+++ b/test/test-input/CMakeLists.txt
@@ -30,15 +30,8 @@ set(test-input_SOURCES
 	test-sinewave.c
 	test-random.c)
 
-set(test-input_HEADERS
-	test-filter.h
-	test-input-exports.h
-	test-random.h
-	test-sinewave.h)
-
 add_library(test-input MODULE
-	${test-input_SOURCES}
-	${test-input_HEADERS})
+	${test-input_SOURCES})
 
 target_link_libraries(test-input
 	${test-input_PLATFORM_DEPS}
