Revamp rendering system to allow custom rendering
Originally, the rendering system was designed to only display sources
and such, but I realized there would be a flaw; if you wanted to render
the main viewport in a custom way, or maybe even the entire application
as a graphics-based front end, you wouldn't have been able to do that.

Displays have now been separated in to viewports and displays.  A
viewport is used to store and draw sources, a display is used to handle
draw callbacks.  You can even use displays without using viewports to
draw custom render displays containing graphics calls if you wish, but
usually they would be used in combination with source viewports at
least.

This requires a tiny bit more work to create simple source displays, but
in the end its worth it for the added flexibility and options it brings.

--- a/libobs/CMakeLists.txt
+++ b/libobs/CMakeLists.txt
@@ -142,6 +142,7 @@ set(libobs_libobs_SOURCES
 	obs-data.c
 	obs-module.c
 	obs-display.c
+	obs-viewport.c
 	obs-scene.c
 	obs-video.c)
 set(libobs_libobs_HEADERS
