added initial pulse audio input plugin
- first try at implementing a pulse audio input plugin,
  it is currently completely untested.

- added license headers to source files

--- a/test/linux/CMakeLists.txt
+++ b/test/linux/CMakeLists.txt
@@ -1,6 +1,7 @@
 project(linux)
 
 find_package(X11 REQUIRED)
+find_package(PulseAudio REQUIRED)
 
 include_directories(SYSTEM "${CMAKE_SOURCE_DIR}/libobs")
 
@@ -8,6 +9,7 @@ set(linux_SOURCES
     linux.c
     xcursor.c
     xshm-input.c
+    pulse-input.c
 )
 set(linux_HEADERS
     xcursor.h
@@ -22,6 +24,7 @@ target_link_libraries(linux
     ${X11_LIBRARIES}
     ${X11_XShm_LIB}
     ${X11_Xfixes_LIB}
+    ${PULSEAUDIO_LIBRARY}
 )
 
 install_obs_plugin(linux)
